# Pokemon-Deep-Research-Agent

./: .gitignore  LICENSE  README.md
pokemon_deep_research_agent/: .env.example  .gitignore  Dockerfile  MEMORY_FEATURES.md  Makefile  backend_api.py  chatgpt_comparison_demo.py  config.json  debug_workflow.py  demo.py  docker-compose.dev.yaml  final_verification.py  interactive_demo_clean.py  interactive_demo_with_memory.py  interactive_demo_with_spec_confirmation.py  main.py  pyproject.toml  quick_start.py  requirements.dev.txt  requirements.txt  run_tests.py  test_comprehensive.py  test_functionality.py  test_llm.py  test_memory_functionality.py  test_message_response.py  test_pokemon_data.py  test_spec_confirmation.py  unified_working_demo.py
pokemon_deep_research_agent/data/conversations/: 29337498-1e7a-496c-bca6-21a8828f6a47.json  2da97da2-76cf-41a7-b252-4f8acce624a5.json  30906b94-6e1f-4b85-91a5-3c0d1df028c8.json  588ec8a4-e555-4169-a975-052caa18676f.json  70937354-bbc8-43b9-b201-93e87696d43b.json  7c61f8f6-7cf3-45a9-ab16-7ca506810952.json  9049ce70-6a23-491a-9498-cd9d092c683d.json  90a29b87-79f1-442c-ac5f-3be08ceebcd1.json  aeb49fcb-78df-48df-8141-f669e663e465.json  default.json  e69a15f8-594d-4661-b158-aa23bfde2cf8.json
pokemon_deep_research_agent/data/memory/: analysis_20250806_194930_499288.json  comparison_20250806_194942_544525.json  conversation_history.json  (+6 more)
pokemon_deep_research_agent/requirements/: PIP_VERSION  dev.in
pokemon_deep_research_agent/src/: __init__.py
pokemon_deep_research_agent/tests/: __init__.py  conftest.py  test.env  test_basic.py
(+26 files in other folders)
